objects/SSO_Job_Code_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will be used for  User permission set group Assignment
Internal or Corporate User - Application Role
Dealer User - Job Code</description>
    <fields>
        <fullName>ApplicationRole__c</fullName>
        <label>ApplicationRole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Required_Tableau_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Based on this field tabulo CRM permission will update</description>
        <label>Is Required Tableau Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Support_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if this checkbox is true user will have HELMS Support Team profile</description>
        <label>Is Support Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permission_set_Group__c</fullName>
        <label>Permission set Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SSO Job Code Mapping</label>
    <listViews>
        <fullName>Test</fullName>
        <columns>NAME</columns>
        <columns>ApplicationRole__c</columns>
        <columns>Job_Code__c</columns>
        <columns>Permission_set_Group__c</columns>
        <columns>Persona__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Test</label>
    </listViews>
</CustomObject>